# IDEAS

./: .gitignore  IDEAS_environment.yml  LICENSE  README.md  pyproject.toml  requirements.txt
Metadata/: Metadata_A2S_fig2.csv  Metadata_FBS_fig2.csv  Metadata_fig3.csv  Metadata_fig5_xenopusIVF.csv  Metadata_fig5_xenopusNT.csv  coding_genes.npy
Notebooks/: Clustering_Preprocessing.ipynb  FIGURE2.ipynb  FIGURE3.ipynb  FIGURE4.ipynb  FIGURE5_and_Suppl.ipynb  FIGURE_Local_ID.ipynb  Local_ID.ipynb  Optimal_scale.ipynb
Tutorial/: Tutorial.ipynb
computeID/: compute_id.py  functions_IDEAS.py  id_methods.py  utils_IDEAS.py
