[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compute_id"
version = "0.1.0"
description = "A package for scRNA-seq analysis"
readme = "README.md"
authors = [
    { name = "Maddalena Staiano" }
]
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "anndata",
    "scanpy",
    "dadapy",
    "scikit-learn",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["computeID/"]